5days forecast function

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                       
                     </div>
                   </div>
-                  <div>5-Day Forecast:</div>
-                  <div class = "container">
+                  <div class="my-3">5-Day Forecast:</div>
+                  <div class = "container-fluid ">
                       <div class = "row" id="forecast">
                         <!-- <div class="col card text-white bg-primary mb-3" style="max-width: 18rem;">
                             <div class="card-header">Header</div>
