--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <button class="btn btn-outline-success my-2 my-sm-0" id="search" type="submit">Search</button>
                 </div>
                   </form>
-                <ul class="list-group mt-3">
-                    <li class="list-group-item">Cras justo odio</li>
+                <ul class="list-group mt-3" id="history">
+                    <!-- <li class="list-group-item"></li> -->
                   
                   </ul>
               </div>
